[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = { version = "1.8.0", features = ["attributes"] }
# env_logger= "0.10.0"
log = "0.4.17"
log4rs = "1.2.0"

serde = {version="1", features=["derive"]}
toml = "0.7.4"
clap = { version = "4", features = ["derive"] }